# M5-BRIEF2

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
backend/: Dockerfile  main.py
backend/modules/: calcul.py
backend/tests/: tests_calcul.py
frontend/: Dockerfile  app.py
