[project]
name = "m5-brief2"
version = "0.1.0"
description = "Automatiser le déploiement avec GitHub Actions et Docker Hub"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
]
